New zsuitecrm logo.

--- a/com_irontec_zsugar/zsugar.css
+++ b/com_irontec_zsugar/zsugar.css
@@ -1,11 +1,11 @@
 .ImgISUGAR-panelIcon {
-	background: url("resources/ironsugar.png") no-repeat 0 0;
+	background: url("resources/zsuitecrm_logo.png") no-repeat 0 0;
 	width: 16px;
 	height: 16px;
 }
 
 .ISUGAR-icon-right {
-	background: url("resources/ironsugar.png") no-repeat 100% 50%;
+	background: url("resources/zsuitecrm_logo.png") no-repeat 100% 50%;
 }
 
 .ImgISUGAR-lead {
